--- a/src/almacen/form/delivery/DeliveryReportForm.form
+++ b/src/almacen/form/delivery/DeliveryReportForm.form
@@ -58,7 +58,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="jScrollPane1" pref="519" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="523" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="lblInfo" min="-2" pref="23" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -144,27 +144,20 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
+              <Component id="jSeparator2" alignment="1" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jSeparator2" alignment="1" max="32767" attributes="0"/>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="btnReport" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="btnSearchByFolio" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                           <Component id="jSeparator1" min="-2" pref="32" max="-2" attributes="0"/>
+                          <Component id="btnSearch" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="btnAttend" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btnSearch" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
-                              <Component id="btnAttend" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="btnReload" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="jButton1" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="btnSearchByFolio" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
-                              <Component id="btnReport" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="btnReload" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" pref="32" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -199,7 +192,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/almacen/icons24/search-24.png"/>
+              <Image iconType="3" name="/almacen/icons/icon24/search-24.png"/>
             </Property>
             <Property name="mnemonic" type="int" value="98"/>
             <Property name="toolTipText" type="java.lang.String" value="[Alt+B] Busqueda"/>
@@ -217,7 +210,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/almacen/icons24/searching-24.png"/>
+              <Image iconType="3" name="/almacen/icons/icon24/searching-24.png"/>
             </Property>
             <Property name="mnemonic" type="int" value="102"/>
             <Property name="toolTipText" type="java.lang.String" value="[Alt+F] Buscar por folio"/>
@@ -235,7 +228,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/almacen/icons24/pdf-24.png"/>
+              <Image iconType="3" name="/almacen/icons/icon24/pdf-24.png"/>
             </Property>
             <Property name="mnemonic" type="int" value="112"/>
             <Property name="toolTipText" type="java.lang.String" value="[Alt+P] Generar PDF"/>
@@ -252,7 +245,7 @@
         <Component class="javax.swing.JButton" name="btnAttend">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/almacen/icons24/user-attend-24.png"/>
+              <Image iconType="3" name="/almacen/icons/icon24/user-attend-24.png"/>
             </Property>
             <Property name="mnemonic" type="int" value="97"/>
             <Property name="toolTipText" type="java.lang.String" value="[Alt+A] Marcar como atendido"/>
@@ -272,7 +265,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/almacen/icons24/refresh-24.png"/>
+              <Image iconType="3" name="/almacen/icons/icon24/refresh-24.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="Recargar"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -289,7 +282,7 @@
               <Font name="Arial" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/almacen/icons24/excel-24.png"/>
+              <Image iconType="3" name="/almacen/icons/icon24/excel-24.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="Exportar a excel"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
